--- a/css/style.css
+++ b/css/style.css
@@ -28,11 +28,14 @@
     justify-content: space-between;
 
 }
-/*.header{
+header{
     position: fixed;
     top:0;
     left:0;
-    width: 100%;*/
+    width: 100%;
+    z-index: 100;
+    
+}
 
 .navi-li{
     display: flex;
@@ -59,6 +62,7 @@
     width: 119px;
     height: 22px;
     display: flex;
+    margin: auto;
     
 }
  .work1{
@@ -70,6 +74,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    margin:auto;
  }
   
 
